Reorganize things and remove unneeded dependency on jQuery

--- a/test/index.html
+++ b/test/index.html
@@ -2,11 +2,10 @@
                     "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-  <script src="../vendor/jquery.js"></script>
-  <link rel="stylesheet" href="../vendor/test/qunit.css" type="text/css" media="screen" />
-  <script type="text/javascript" src="../vendor/test/qunit.js"></script>
-  <script type="text/javascript" src="../handlebars.js"></script>
-  <script type="text/javascript" src="handlebars.js"></script>
+  <script src="vendor/jquery.js"></script>
+  <link rel="stylesheet" href="vendor/test/qunit.css" type="text/css" media="screen" />
+  <script type="text/javascript" src="vendor/test/qunit.js"></script>
+  <script type="text/javascript" src="../lib/handlebars.js"></script>
 </head>
 <body>
   <h1 id="qunit-header">QUnit example</h1>
@@ -15,6 +14,7 @@
   <ol id="qunit-tests"></ol>
   <div id="main" style="display: none">
   </div>
+  <script type="text/javascript" src="handlebars.js"></script>
 </body>
 </html>
 
