Added basic performance test.

--- a/test/perf.html
+++ b/test/perf.html
@@ -12,7 +12,7 @@
   <h2 id="qunit-banner"></h2>
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
-  <div id="main" style="display: none">
+  <div id="main">
   </div>
   <script type="text/javascript" src="perf.js"></script>
 </body>
