--- a/test/perf.html
+++ b/test/perf.html
@@ -14,6 +14,7 @@
   <ol id="qunit-tests"></ol>
   <div id="main">
   </div>
+  <script type="text/javascript" src="compat.js"></script>
   <script type="text/javascript" src="perf.js"></script>
 </body>
 </html>
