--- a/test/index.html
+++ b/test/index.html
@@ -2,13 +2,14 @@
                     "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-  <script src="vendor/jquery.js"></script>
+  <title>Handlebars.js Test Suite</title>
   <link rel="stylesheet" href="vendor/test/qunit.css" type="text/css" media="screen" />
+  <script type="text/javascript" src="vendor/jquery.js"></script>
   <script type="text/javascript" src="vendor/test/qunit.js"></script>
   <script type="text/javascript" src="../lib/handlebars.js"></script>
 </head>
 <body>
-  <h1 id="qunit-header">QUnit example</h1>
+  <h1 id="qunit-header">Handlebars.js Test Suite</h1>
   <h2 id="qunit-banner"></h2>
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
@@ -17,4 +18,3 @@
   <script type="text/javascript" src="handlebars.js"></script>
 </body>
 </html>
-
