Skip leak check under FF

--- a/spec/index.html
+++ b/spec/index.html
@@ -45,7 +45,10 @@
     <script src="/tmp/tests.js"></script>
     <script>
       onload = function(){
-        mocha.checkLeaks();
+        // The test harness leaks under FF. We should have decent global leak coverage from other tests
+        if (!navigator.userAgent.match(/Firefox\/([\d.]+)/)) {
+          mocha.checkLeaks();
+        }
         mocha.run();
       };
     </script>
