Add better logging of test compile errors

--- a/spec/amd.html
+++ b/spec/amd.html
@@ -45,9 +45,14 @@
       };
 
       function safeEval(templateSpec) {
-        var ret;
-        eval('ret = ' + templateSpec);
-        return ret;
+        try {
+          var ret;
+          eval('ret = ' + templateSpec);
+          return ret;
+        } catch (err) {
+          console.error(templateSpec);
+          throw err;
+        }
       }
     </script>
     <script>
