--- a/spec/index.html
+++ b/spec/index.html
@@ -37,9 +37,14 @@
       };
 
       function safeEval(templateSpec) {
-        var ret;
-        eval('ret = ' + templateSpec);
-        return ret;
+        try {
+          var ret;
+          eval('ret = ' + templateSpec);
+          return ret;
+        } catch (err) {
+          console.error(templateSpec);
+          throw err;
+        }
       }
     </script>
     <script src="/tmp/tests.js"></script>
