--- a/spec/amd.html
+++ b/spec/amd.html
@@ -23,6 +23,7 @@
       mocha.setup('bdd');
     </script>
 
+    <script src="/spec/env/json2.js"></script>
     <script src="/spec/env/require.js"></script>
 
     <script src="/spec/env/common.js"></script>
