chore: add chai and dirty-chai for better test assertions

--- a/spec/index.html
+++ b/spec/index.html
@@ -20,6 +20,8 @@
       }
     </script>
     <script src="/node_modules/mocha/mocha.js"></script>
+    <script src="/node_modules/chai/chai.js"></script>
+    <script src="/node_modules/dirty-chai/lib/dirty-chai.js"></script>
     <script>
       mocha.setup('bdd');
     </script>
