--- a/spec/umd-runtime.html
+++ b/spec/umd-runtime.html
@@ -26,8 +26,8 @@
       window.expect = chai.expect;
       mocha.setup('bdd');
     </script>
-    <script src="/spec/env/json2.js"></script>
-    <script src="/spec/env/require.js"></script>
+    <script src="/spec/vendor/json2.js"></script>
+    <script src="/spec/vendor/require.js"></script>
 
     <script src="/spec/env/common.js"></script>
     <script>
